--- a/src/main/resources/templates/user-delete.html
+++ b/src/main/resources/templates/user-delete.html
@@ -176,7 +176,7 @@
                                             <tbody>
                                             <tr th:each="user : ${users}">
                                                 <td th:text="${user.id}">...</td>
-                                                <td th:text="${user.username}">...</td>
+                                                <td th:text="${user.getName()}">...</td>
                                                 <td th:text="${user.surname}">...</td>
                                                 <td th:text="${user.age}">...</td>
                                                 <td th:text="${user.email}">...</td>
