--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -62,7 +62,7 @@
 
             <tbody>
             <td th:text="${user.getId()}">...</td>
-            <td th:text="${user.getUsername()}">...</td>
+            <td th:text="${user.getName()}">...</td>
             <td th:text="${user.getSurname()}">...</td>
             <td th:text="${user.getAge()}">...</td>
             <td th:text="${user.getEmail()}">...</td>
